# proxyres

./: .clang-format  .codecov.yaml  .gitignore  CMakeLists.txt  README.md  config.c  config.h  config_env.c  config_env.h  config_gnome2.c  config_gnome2.h  config_gnome3.c  config_gnome3.h  config_i.h  config_kde.c  config_kde.h  config_mac.c  config_mac.h  config_win.c  config_win.h  dns.c  dns.h  event.h  event_pthread.c  event_win.c  execute.c  execute.h  execute_i.h  execute_jsc.c  execute_jscore.c  execute_jscore.h  execute_jscoregtk.c  execute_jscoregtk.h  execute_jsproxy.c  execute_jsproxy.h  execute_wsh.c  execute_wsh.h  execute_wsh_dispatch.h  execute_wsh_site.h  fetch.h  (+66 more)
.github/: dependabot.yml
.github/workflows/: build.yaml  lint.yaml  macos.yaml  ubuntu.yaml  win.yaml  win32.yaml  windows.yaml  winrt.yaml
doc/: README.md  proxy_config.md  proxy_execute.md  proxy_resolver.md
include/proxyres/: config.h  log.h  proxyres.h  resolver.h
test/: CMakeLists.txt  curl_proxyres.c  dhcp_server.js  dhcp_server_cmd.js  http_server_cmd.js  pac.js  package.json  proxycli.c  test_config.cc  test_dns.cc  test_execute.cc  test_fetch.cc  test_main.cc  test_net_adapter.cc  test_net_util.cc  test_threadpool.cc  test_util.cc  test_util_linux.cc  test_util_win.cc  test_wpad.cc  tpoolcli.c
test/pac/: example.js
test/uwp/: Package.appxmanifest  Windows_TemporaryKey.pfx
